# Zonix

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  access.py  api_tokens.py  audit.py  auth.py  bootstrap.py  config.py  control_plane.py  database.py  http_security.py  identity_providers.py  main.py  migrations.py  mock_adapter.py  observability.py  oidc.py  policy.py  powerdns.py  record_writes.py  rfc2136.py  runtime.py  schemas.py  security.py  zone_reads.py
backend/app/domain/: __init__.py  models.py
backend/docker/: entrypoint.sh
backend/migrations/: 0001_initial.sql  0002_identity_provider_oidc_fields.sql  0003_api_tokens.sql  0004_performance_indexes.sql
backend/scripts/: export_openapi.py
backend/tests/: __init__.py  test_access.py  test_access_persistence.py  test_api_tokens.py  test_audit.py  test_auth_api.py  test_bootstrap.py  test_config.py  test_control_plane.py  test_domain_models.py  test_dual_backend_flow_integration.py  test_identity_providers.py  test_mock_api.py  test_oidc.py  test_oidc_gateway.py  test_policy.py  test_powerdns.py  test_powerdns_flow_integration.py  test_powerdns_live_integration.py  test_rfc2136.py  test_rfc2136_flow_integration.py  test_rfc2136_snapshot_flow_integration.py  test_scaffold.py  test_security.py  test_zone_reads.py
deploy/: .env.example  demo.env  docker-compose.bind-lab.yml  docker-compose.yml
docs/: api-examples.md  architecture.md  auth-modes.md  backend-adapters.md  domain-model-v0.1.md  (+11 more)
(+60 files in other folders)
