[project]
name = "zonix-backend"
version = "0.1.0"
description = "FastAPI backend for Zonix DNS control plane"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.128.0,<1.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "uvicorn>=0.38.0,<1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
