[project]
name = "zonix-backend"
version = "0.1.0"
description = "FastAPI backend for Zonix DNS control plane"
requires-python = ">=3.14"
dependencies = [
  "dnspython>=2.7.0,<3.0.0",
  "fastapi>=0.128.0,<1.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "psycopg[binary]>=3.2.12,<4.0.0",
  "uvicorn>=0.38.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "ruff>=0.14.1,<1.0.0"
]

[project.scripts]
zonix-migrate = "app.migrations:main"
zonix-bootstrap-admin = "app.bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
